--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,10 @@ bin-release/
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
 
+# node_modules
+/node_modules
+
 # tmp
-/ethereum
-/ethereum-sdk-monitor
-/ethereum-sdk-my
+/_ethereum
+/_ethereum-sdk-monitor
+/_ethereum-sdk-my
